add拍照的頁面連接

--- a/app/src/main/res/layout/shoot_code_infor.xml
+++ b/app/src/main/res/layout/shoot_code_infor.xml
@@ -8,15 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="資訊"
-        android:id="@+id/textView21"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="商家："
         android:id="@+id/textView25"
         android:layout_marginTop="20dp" />
@@ -29,10 +20,15 @@
         android:id="@+id/textView26"
         android:layout_marginTop="10dp" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="285dp"
+        android:id="@+id/imageView2"
+        android:src="@drawable/tablesample" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="133dp"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="133dp">
 
         <Button
             android:layout_width="wrap_content"
@@ -48,7 +44,8 @@
             android:text="下一步"
             android:id="@+id/button18"
             android:layout_alignTop="@+id/button16"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:onClick="btnShootInfoNext" />
 
     </RelativeLayout>
 
