--- a/app/src/main/res/layout/mainview.xml
+++ b/app/src/main/res/layout/mainview.xml
@@ -29,7 +29,8 @@
         android:text="定點規劃"
         android:id="@+id/button8"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:onClick="btnLocation" />
 
     <Button
         android:layout_width="wrap_content"
