--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,12 +13,13 @@
             android:id="@+id/editAccount"
             android:layout_above="@+id/editPassword"
             android:layout_centerHorizontal="true"
-            android:hint="帳號" />
+            android:hint="帳號"
+            android:layout_marginTop="20dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:ems="10"
+            android:ems="12"
             android:id="@+id/editPassword"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
