--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#feffd6">
 
 
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="230dp"
+        android:id="@+id/logo"
+        android:src="@drawable/logo_small"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -11,10 +19,9 @@
             android:inputType="textPersonName"
             android:ems="12"
             android:id="@+id/editAccount"
-            android:layout_above="@+id/editPassword"
             android:layout_centerHorizontal="true"
             android:hint="帳號"
-            android:layout_marginTop="20dp" />
+            android:layout_below="@id/logo" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,32 +31,34 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:layout_centerVertical="true"
-            android:hint="密碼"/>
+            android:layout_below="@id/editAccount"
+            android:hint="密碼" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/btn_margin_bottom">
-            <LinearLayout
+            android:orientation="vertical"
+            android:layout_below="@id/editPassword">
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="登入"
-                    android:id="@+id/button"
-                    android:layout_margin="10dp"
-                    android:onClick="btnLogin" />
-                <com.facebook.login.widget.LoginButton
-                    android:id="@+id/fb_login_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="10dp" />
-            </LinearLayout>
+                android:layout_height="50dp"
+                android:src="@drawable/sign"
+                android:id="@+id/button"
+                android:layout_marginTop="10dp"
+                android:onClick="btnLogin" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:src="@drawable/gearing"
+                android:id="@+id/button3"
+                android:layout_margin="5dp"
+                android:onClick="btnLogin" />
+            <!--<com.facebook.login.widget.LoginButton-->
+                <!--android:id="@+id/fb_login_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:layout_margin="10dp" />-->
 
             <Button
                 android:layout_width="wrap_content"
@@ -59,5 +68,6 @@
                 android:layout_marginLeft="20dp"
                 android:onClick="btnForgotPassword" />
 
-        </LinearLayout>
+
+            </LinearLayout>
 </RelativeLayout>
