--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -46,21 +46,21 @@
                 android:id="@+id/button"
                 android:layout_marginTop="10dp"
                 android:onClick="btnLogin" />
-            <ImageView
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:src="@drawable/gearing"
-                android:id="@+id/button3"
-                android:layout_margin="5dp"
-                android:onClick="btnLogin" />
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp" />
 
 
-            <Button
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="忘記密碼"
                 android:id="@+id/button2"
-                android:layout_marginLeft="20dp"
+                android:layout_gravity="right"
                 android:onClick="btnForgotPassword" />
 
 
