--- a/app/src/main/res/layout/shoot_post.xml
+++ b/app/src/main/res/layout/shoot_post.xml
@@ -1,98 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:paddingBottom="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingTop="15dp"
+    android:background="#feffd6">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="164dp">
+        android:layout_height="164dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="0.6"
+        android:background="#bfffbf">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:id="@+id/imageView5"
             android:src="@drawable/post"
             android:scaleType="fitXY"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="描述："
-            android:id="@+id/textView27"
-            android:layout_above="@+id/imageView5"
-            android:layout_toEndOf="@+id/imageView5" />
-
         <EditText
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/editText13"
-            android:layout_below="@+id/textView27"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_toEndOf="@+id/imageView5"
-            android:text="（敘述食物、餐點之類的）" />
+            android:hint="敘述"
+            />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="定位："
-        android:id="@+id/textView28"
-        android:layout_marginRight="30dp" />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPostalAddress"
-        android:ems="10"
-        android:id="@+id/editText14"
-        android:text="餐廳" />
+        android:layout_weight="0.2"
+        android:layout_marginBottom="20dp"
+        android:background="#ffdf77">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="分享至"
-        android:id="@+id/textView29" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_gravity="center"
+            android:text="定位："
+            android:textSize="25dp"
+            android:id="@+id/textView28"
+             />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPostalAddress"
+            android:ems="20"
+            android:id="@+id/editText14"
+            android:text="餐廳" />
+    </LinearLayout>
+
+
+
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.67"
-        android:weightSum="1">
+        android:layout_weight="0.2"
+        android:weightSum="1"
+        android:layout_marginBottom="10dp"
+        android:background="#ccffff">
 
-        <ImageButton
-            android:layout_width="113dp"
-            android:layout_height="111dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="分享："
+            android:textSize="25dp"
+            android:id="@+id/textView29" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/imageButton"
-            android:src="@drawable/icon_fb"
+            android:src="@drawable/sfb"
             android:layout_gravity="center_vertical"
             android:onClick="btnFacebookShare" />
 
-        <ImageButton
-            android:layout_width="113dp"
-            android:layout_height="111dp"
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/imageButton2"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/twitter_icon2"
+            android:src="@drawable/sline"
             android:onClick="btnTwitterShare"/>
 
         <ImageButton
-            android:layout_width="113dp"
-            android:layout_height="111dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/imageButton3"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/icon_ig"
+            android:src="@drawable/stwitter"
             android:onClick="btnInstagramShare"/>
 
     </LinearLayout>
