--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -1,41 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="15dp"
+    android:background="#feffd6">
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="字體大小調整"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="-35dp"
+        android:layout_marginBottom="-40dp"
+        android:src="@drawable/remind"
         android:id="@+id/button15"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp" />
+         />
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="編輯個人資料"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="-40dp"
+        android:layout_marginBottom="-40dp"
+        android:src="@drawable/edit"
         android:id="@+id/button19"
         android:layout_gravity="center_horizontal" />
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="使用說明中心"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="-40dp"
+        android:layout_marginBottom="-40dp"
+        android:src="@drawable/explanation"
         android:id="@+id/button20"
         android:layout_gravity="center_horizontal" />
 
-    <Button
-        android:layout_width="111dp"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="回報問題"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="-40dp"
+        android:layout_marginBottom="-40dp"
+        android:src="@drawable/reportproblem"
         android:id="@+id/button21"
         android:layout_gravity="center_horizontal" />
 
-    <Button
-        android:layout_width="112dp"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登出"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="-40dp"
+        android:layout_marginBottom="-40dp"
         android:id="@+id/button22"
+        android:src="@drawable/signout"
         android:layout_gravity="center_horizontal" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/home"
+            android:id="@+id/home"
+            android:layout_alignParentRight="true"
+            android:onClick="btnHome">
+        </ImageView>
+
+    </RelativeLayout>
 </LinearLayout>
