--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -27,7 +27,8 @@
         android:layout_marginBottom="-40dp"
         android:src="@drawable/edit"
         android:id="@+id/button19"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="btnSettingToSettingEditMem"/>
 
     <ImageView
         android:layout_width="wrap_content"
