--- a/app/src/main/res/layout/shoot_post.xml
+++ b/app/src/main/res/layout/shoot_post.xml
@@ -89,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="分享："
             android:textSize="25dp"
