--- a/app/src/main/res/layout/register01.xml
+++ b/app/src/main/res/layout/register01.xml
@@ -142,7 +142,8 @@
              android:layout_weight="0.2"
              android:layout_marginLeft="10dp"
              android:id="@+id/imagecalender"
-             android:src="@drawable/calendar"/>
+             android:src="@drawable/calendar"
+             android:onClick="datePick"/>
 
      </LinearLayout>
 
